# Soul-Craft-Studio-khushi

./: .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  README_API.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  test_beanie_lookup.py  vercel.json  verify_link_fix.py  verify_sanitization.py
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  railway.json  requirements.txt
backend/api/: content.py  shop.py  users.py
backend/backbone/: __init__.py  config.py  db.py  email_sender.py  hooks.py
backend/backbone/admin/: __init__.py  router.py  site.py
backend/backbone/admin/templates/: base.html  config_list.html  dashboard.html  export.html  import.html  login.html  model_create.html  model_detail.html  model_list.html  wipe.html
backend/backbone/auth/: hooks.py  pages.py  router.py  service.py
backend/backbone/cli/: __init__.py  main.py
backend/backbone/common/: exceptions.py  services.py  utils.py
backend/backbone/compat/: __init__.py  beanie_motor_aggregate.py
backend/backbone/contrib/: __init__.py  admin.py  auth.py
backend/backbone/core/: config.py  database.py  dependencies.py  enums.py  exceptions.py  fields.py  initializer.py  media.py  media_router.py  mixins.py  models.py  pagination.py  permissions.py  rate_limit.py  repository.py  settings.py  signals.py  url_utils.py
backend/backbone/domain/: base.py  models.py
backend/backbone/generic/: __init__.py  action.py  routers.py  utils.py  views.py
backend/backbone/repositories/: base.py
backend/backbone/schemas/: __init__.py  auth.py  common.py
backend/backbone/services/: auth.py  cache.py  mail.py  scheduler.py  tasks.py
backend/backbone/templates/admin/: base.html  config.html  dashboard.html  export.html  import.html  login.html  model_create.html  model_detail.html  model_list.html  store.html  wipe.html
backend/backbone/templates/email/: order_confirmation.html  order_status_update.html  password_reset.html  verify_email.html  welcome.html  (+1 more)
backend/backbone/utils/: security.py
backend/docker/: nginx.conf  renew-ip-https.sh  setup-ip-https.sh  start.sh
backend/ecommerce/: __init__.py  models.py  settings.py  statuses.py  urls.py
backend/ecommerce/api/: __init__.py  content.py  shop.py
backend/pages/: admin_pages.py  contact.py  user_guide.py
backend/schemas/: content.py  shop.py
backend/scratch/: check_user.py  check_user_links.py  debug_cart_db.py  find_google_users.py  list_dbs.py  test_user_update.py  verify_lifecycle.py  wipe_carts.py
backend/scripts/: fix_ecommerce_data.py  seed_khushi.py  seed_products.py
backend/store/: admin.py  models.py  serializers.py  urls.py  views.py
backend/store/models/: __init__.py  order.py  payment.py
backend/store/serializers/: order.py
backend/store/utils/: email.py  pdf.py
backend/store/views/: admin.py  order.py  product.py
backend/templates/email/: base_email.html  order_confirmation.html  order_status_update.html  password_reset.html  welcome.html  welcome_email.html  welcome_pack_email.html  welcome_verification.html
backend/templates/pages/: about_blogermenia.html  admin_orders.html  admin_products.html  base_public.html  contact_form.html  contact_list.html  store_test.html  user_guide.html
backend/tests/: conftest.py  seed.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_admin_dashboard_storage.py  test_html_template_resolution.py  test_mail_template_resolution.py  test_permissions.py  test_repository.py  test_security.py  test_signals.py  test_user_validators.py
(+74 files in other folders)
