[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=48.0.0",
    "dj-rest-auth>=7.2.0",
    "django>=6.0.5",
    "django-allauth>=65.17.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
]
